--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -10,6 +10,7 @@
   "author": "sagar",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.2"
